[gd_scene load_steps=20 format=3 uid="uid://bp1cbh34d3dih"]

[ext_resource type="Script" uid="uid://dprp2us08i2jy" path="res://Scripts/mercado_pago.gd" id="1_0kmvw"]
[ext_resource type="PackedScene" uid="uid://bytdvjfsp4ena" path="res://references.tscn" id="1_7dqyd"]
[ext_resource type="FontFile" uid="uid://c3hisuwphddmn" path="res://Assets/Fonts/MercadoPago/Proxima Nova Semibold.otf" id="2_nrmnp"]
[ext_resource type="PackedScene" uid="uid://shuyqn7utcag" path="res://Nodes/exit_button.tscn" id="2_ouif8"]
[ext_resource type="FontFile" uid="uid://b75m53uvg7occ" path="res://Assets/Fonts/MercadoPago/Proxima Nova Regular.otf" id="3_eqx46"]
[ext_resource type="Texture2D" uid="uid://dn4skfw4hdjkm" path="res://Assets/Images/Perfil.png" id="3_ifk1w"]
[ext_resource type="Texture2D" uid="uid://dogtn5icrnm5i" path="res://Assets/Images/Mercado.png" id="5_ifk1w"]

[sub_resource type="Gradient" id="Gradient_3eq1y"]
colors = PackedColorArray(0.007843138, 0.6431373, 0.30588236, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_nrmnp"]
gradient = SubResource("Gradient_3eq1y")
fill_from = Vector2(0, 0.125)
fill_to = Vector2(0, 0.25)
metadata/_snap_enabled = true
metadata/_snap_count = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ifk1w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouif8"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.055000003)
shadow_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_0kmvw"]
font = ExtResource("2_nrmnp")
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ouif8"]
font = ExtResource("3_eqx46")
font_size = 126
font_color = Color(0.007843138, 0.6431373, 0.30588236, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pionu"]
font = ExtResource("2_nrmnp")
font_size = 33
font_color = Color(0.007843138, 0.6431373, 0.30588236, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5go6x"]
font = ExtResource("3_eqx46")
font_size = 29
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_etkmm"]
line_spacing = -10.0
font = ExtResource("3_eqx46")
font_size = 27
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ouif8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kmvw"]
content_margin_top = 18.0
content_margin_bottom = 18.0
bg_color = Color(0.20784314, 0.5176471, 0.99215686, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5go6x"]
content_margin_top = 18.0
content_margin_bottom = 18.0

[node name="MercadoPago" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0kmvw")

[node name="References" parent="." instance=ExtResource("1_7dqyd")]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(288, 512)
scale = Vector2(9, 16)
texture = SubResource("GradientTexture2D_nrmnp")

[node name="Exit" parent="." instance=ExtResource("2_ouif8")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 530.0
offset_top = 85.0
offset_right = 538.0
offset_bottom = 93.0
grow_horizontal = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 120.0
offset_right = 552.0
offset_bottom = 624.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ifk1w")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouif8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Â¡Listo! Transferiste el 
dinero"
label_settings = SubResource("LabelSettings_0kmvw")

[node name="Sprite2D2" type="Sprite2D" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 2
position = Vector2(431, 41)
scale = Vector2(0.24, 0.24)
texture = ExtResource("3_ifk1w")

[node name="User_Name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Sprite2D2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -295.5
offset_right = -236.0
offset_bottom = -216.5
grow_horizontal = 2
grow_vertical = 2
text = "R"
label_settings = SubResource("LabelSettings_ouif8")

[node name="ParaLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Para Ramses"
label_settings = SubResource("LabelSettings_pionu")

[node name="AccountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "A su cuenta de NU MEXICO"
label_settings = SubResource("LabelSettings_5go6x")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouif8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="MoneyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "$ 5"
label_settings = SubResource("LabelSettings_0kmvw")

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ouif8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 28
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
text = "Saldo en cuenta Mercado Pago
Wallet"
label_settings = SubResource("LabelSettings_etkmm")

[node name="Mercado" type="Sprite2D" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer"]
texture_filter = 2
position = Vector2(60, 51)
scale = Vector2(0.235, 0.235)
texture = ExtResource("5_ifk1w")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.84700006
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 116.5
offset_top = -0.32806396
offset_right = -116.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_ouif8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="Button" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_nrmnp")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxFlat_0kmvw")
text = "Compartir comprobante"

[node name="Button2" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.20784314, 0.5176471, 0.99215686, 1)
theme_override_fonts/font = ExtResource("2_nrmnp")
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = SubResource("StyleBoxEmpty_5go6x")
text = "Volver al inicio"
